bannex/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: bannex
  namespace: apps
spec:
  selector:
    app: bannex
  ports:
    - name: http
      port: 7000
      targetPort: http
  type: ClusterIP
