bannex/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: bannex
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`bannex.auxtal.xyz`)
      kind: Rule
      services:
        - name: bannex
          port: 7000
  tls:
    certResolver: le
